--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -214,7 +214,7 @@ a {
 		color: $secondary-color;
 	}
 
-	#stop_button, #break_button, #relaunch_button {
+	#stop_button, #break_button, #relaunch_button, #pause_button {
 		display: none;
 	}
 }
