--- a/public/css/main.css
+++ b/public/css/main.css
@@ -65,7 +65,9 @@ a {
   position: fixed;
   top: 0;
   left: -400px;
+  font-size: 1.2em;
   transition: left .5s;
+  overflow: scroll;
   background-color: #326273; }
   #rewards_panel .close_button {
     position: absolute;
@@ -81,13 +83,40 @@ a {
     margin: 0;
     padding: 0; }
     #rewards_panel ul li {
-      padding: 30px;
+      padding: 30px 10px;
       border-bottom: 1px solid #5C9EAD; }
       #rewards_panel ul li:first-child {
         border-top: 1px solid #5C9EAD; }
       #rewards_panel ul li a {
         color: #db4432;
         float: right; }
+  #rewards_panel #add_reward {
+    outline: none;
+    padding: 30px 10px;
+    background-color: #326273;
+    border: 0; }
+
+::-webkit-input-placeholder {
+  /* WebKit, Blink, Edge */
+  color: #5C9EAD; }
+
+:-moz-placeholder {
+  /* Mozilla Firefox 4 to 18 */
+  color: #5C9EAD;
+  opacity: 1; }
+
+::-moz-placeholder {
+  /* Mozilla Firefox 19+ */
+  color: #5C9EAD;
+  opacity: 1; }
+
+:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: #5C9EAD; }
+
+::-ms-input-placeholder {
+  /* Microsoft Edge */
+  color: #5C9EAD; }
 
 /* -----------
  * ABOUT PANEL
