Complete the timer with 4 pomodoro

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -167,7 +167,7 @@ a {
     margin: 50px; }
   .content span {
     color: #326273; }
-  .content #stop_button, .content #break_button, .content #relaunch_button, .content #pause_button {
+  .content #stop_button, .content #break_button, .content #long_break_button, .content #short_break_button, .content #relaunch_button, .content #pause_button {
     display: none; }
 
 /* -------------
