--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -242,7 +242,7 @@ a {
 		color: $secondary-color;
 	}
 
-	#stop_button, #break_button, #relaunch_button, #pause_button {
+	#stop_button, #break_button, #long_break_button, #short_break_button, #relaunch_button, #pause_button {
 		display: none;
 	}
 }
