--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,7 +6,8 @@ body {
   background-color: #5C9EAD;
   color: #FFF;
   font-family: "Roboto Slab", serif;
-  margin: 0; }
+  margin: 0;
+  overflow-x: hidden; }
 
 a {
   color: #FFF;
@@ -78,7 +79,7 @@ a {
   left: -400px;
   font-size: 1.2em;
   transition: left .5s;
-  overflow: scroll;
+  overflow-x: auto;
   background-color: #326273; }
   #rewards_panel .close_button {
     position: absolute;
@@ -152,6 +153,47 @@ a {
       #about_panel p a:hover {
         color: #5C9EAD; }
 
+/* -------------
+ * CONTACT PANEL
+ * -------------
+ */
+#contact_panel {
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  top: calc(50% - 150px);
+  right: -357px;
+  width: 400px;
+  height: 300px;
+  background-color: #FFF;
+  border-radius: 5px;
+  transition: right .5s; }
+  #contact_panel .header {
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    padding: 0;
+    margin: 0;
+    height: 100%;
+    font-size: 2em;
+    font-weight: 700;
+    writing-mode: vertical-lr;
+    text-align: center;
+    transform: rotate(180deg);
+    text-transform: uppercase;
+    background-color: #db4432;
+    float: left; }
+  #contact_panel .form {
+    color: #000; }
+    #contact_panel .form p {
+      margin: 30px;
+      margin-left: 80px; }
+      #contact_panel .form p a {
+        color: #5C9EAD; }
+    #contact_panel .form .thanks {
+      text-transform: uppercase;
+      font-size: 2em;
+      text-align: center; }
+
 /* -------
  * CONTENT
  * -------
@@ -178,7 +220,12 @@ a {
     margin: 50px; }
   .content span {
     color: #326273; }
-  .content #stop_button, .content #break_button, .content #long_break_button, .content #short_break_button, .content #relaunch_button, .content #pause_button {
+  .content #stop_button,
+  .content #break_button,
+  .content #long_break_button,
+  .content #short_break_button,
+  .content #relaunch_button,
+  .content #pause_button {
     display: none; }
 
 /* -------------
