--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -1,15 +1,13 @@
 $white: #FFF;
 $black: #000;
-
 $primary-color: #5C9EAD;
 $secondary-color: #326273;
-
 $yellow: #F3D913;
 $dark-yellow: #F5C802;
 $red: #db4432;
 $green: #1a7c24;
-
-$font: 'Roboto Slab', serif;
+$font: 'Roboto Slab',
+serif;
 
 /* -------
  * GENERAL
@@ -21,6 +19,7 @@ body {
 	color: $white;
 	font-family: $font;
 	margin: 0;
+	overflow-x: hidden;
 }
 
 a {
@@ -28,14 +27,11 @@ a {
 	text-decoration: none;
 }
 
-
 .button {
 	display: inline-block;
 	margin: auto;
 	width: 20%;
-
 	color: $white;
-
 	border-radius: 10px;
 }
 
@@ -55,6 +51,7 @@ a {
 	background-color: $red;
 }
 
+
 /* ------
  *  MENU
  * ------
@@ -62,19 +59,14 @@ a {
 
 #menu {
 	list-style: none;
-
 	font-size: 1.5em;
 	text-transform: uppercase;
 	display: inline-block;
-
 	padding: 0;
 	margin: 0;
-
 	transition: margin-left .5s;
-
 	li {
 		float: left;
-	
 		a {
 			display: block;
 			padding: 8px;
@@ -84,13 +76,11 @@ a {
 			}
 		}
 	}
-
 	.brand {
 		span {
 			color: $white;
 			font-weight: 700;
 		}
-
 		i {
 			display: inline-block;
 			position: relative;
@@ -106,6 +96,7 @@ a {
 	}
 }
 
+
 /* -------------
  * REWARDS PANEL
  * -------------
@@ -118,13 +109,9 @@ a {
 	top: 0;
 	left: -400px;
 	font-size: 1.2em;
-
 	transition: left .5s;
-
-	overflow: scroll;
-
+	overflow-x: auto;
 	background-color: $secondary-color;
-
 	.close_button {
 		position: absolute;
 		top: 0;
@@ -133,56 +120,60 @@ a {
 		font-weight: 700;
 		font-size: 1.5em;
 	}
-
 	h1 {
 		text-align: center;
 	}
-
 	ul {
 		list-style: none;
 		margin: 0;
 		padding: 0;
-		
 		li {
 			padding: 30px 10px;
 			border-bottom: 1px solid $primary-color;
 			&:first-child {
 				border-top: 1px solid $primary-color;
 			}
-
 			a {
 				color: $red;
 				float: right;
 			}
 		}
 	}
-
 	#add_reward {
 		outline: none;
 		padding: 30px 10px;
 		background-color: $secondary-color;
 		border: 0;
 	}
-
 }
 
-::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+::-webkit-input-placeholder {
+	/* WebKit, Blink, Edge */
 	color: $primary-color;
 }
-:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+
+:-moz-placeholder {
+	/* Mozilla Firefox 4 to 18 */
 	color: $primary-color;
-	opacity:  1;
+	opacity: 1;
 }
-::-moz-placeholder { /* Mozilla Firefox 19+ */
+
+::-moz-placeholder {
+	/* Mozilla Firefox 19+ */
 	color: $primary-color;
-	opacity:  1;
+	opacity: 1;
 }
-:-ms-input-placeholder { /* Internet Explorer 10-11 */
+
+:-ms-input-placeholder {
+	/* Internet Explorer 10-11 */
 	color: $primary-color;
 }
-::-ms-input-placeholder { /* Microsoft Edge */
+
+::-ms-input-placeholder {
+	/* Microsoft Edge */
 	color: $primary-color;
 }
+
 
 /* -----------
  * ABOUT PANEL
@@ -195,17 +186,13 @@ a {
 	width: 400px;
 	top: 0;
 	right: -400px;
-
 	transition: right .5s;
-
 	background-color: $secondary-color;
-
 	.close_button {
 		font-weight: 700;
 		font-size: 1.5em;
 		margin: 10px;
 	}
-
 	p {
 		margin: 30px;
 		a {
@@ -217,6 +204,57 @@ a {
 	}
 }
 
+
+/* -------------
+ * CONTACT PANEL
+ * -------------
+ */
+
+#contact_panel {
+	padding: 0;
+	margin: 0;
+	position: absolute;
+	top: calc(50% - 150px);
+	right: -357px;
+	width: 400px;
+	height: 300px;
+	background-color: $white;
+	border-radius: 5px;
+	transition: right .5s;
+
+	.header {
+		border-top-right-radius: 5px;
+		border-bottom-right-radius: 5px;
+		padding: 0;
+		margin: 0;
+		height: 100%;
+		font-size: 2em;
+		font-weight: 700;
+		writing-mode: vertical-lr;
+		text-align: center;
+		transform: rotate(180deg);
+		text-transform: uppercase;
+		background-color: $red;
+		float: left;
+	}
+	.form {
+		color: $black;
+		p {
+			margin: 30px;
+			margin-left: 80px;
+			a {
+				color: $primary-color;
+			}
+		}
+		.thanks {
+			text-transform: uppercase;
+			font-size: 2em;
+			text-align: center;
+		}
+	}
+}
+
+
 /* -------
  * CONTENT
  * -------
@@ -225,14 +263,11 @@ a {
 .content {
 	margin: 120px auto;
 	width: 70%;
-
 	transition: left .5s, right .5s;
-
 	text-align: center;
 	text-transform: uppercase;
 	font-size: 2em;
 	font-weight: 700;
-
 	img {
 		width: 15%;
 		margin-bottom: 50px;
@@ -240,25 +275,27 @@ a {
 		vertical-align: middle;
 		padding: 10px;
 	}
-
 	#timer {
 		color: $white;
 		font-weight: 700;
 		font-size: 4em;
 	}
-
 	p {
 		margin: 50px;
 	}
-
 	span {
 		color: $secondary-color;
 	}
-
-	#stop_button, #break_button, #long_break_button, #short_break_button, #relaunch_button, #pause_button {
+	#stop_button,
+	#break_button,
+	#long_break_button,
+	#short_break_button,
+	#relaunch_button,
+	#pause_button {
 		display: none;
 	}
 }
+
 
 /* -------------
  * BREAK OPTIONS
